--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Dami Menu in Reactjs</title>
+    <title>Dami Menu</title>
   </head>
   <body>
     
